--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,33 +80,37 @@ jobs:
     strategy:
       matrix:
         target: [bree, pi8]
-        include:
-          - target: bree
-            ingress_host: bree
-          - target: pi8
-            ingress_host: pi8
     runs-on: [ self-hosted, sbgb, "${{ matrix.target }}" ]
     steps:
       - uses: actions/checkout@v4
 
-      - name: Deploy to Kubernetes
+      # --- DÉPLOIEMENT KUBERNETES POUR BREE ---
+      - name: Deploy to Kubernetes (Bree only)
+        if: matrix.target == 'bree'
         run: |
-          # Patch host in ingress file for the specific target
-          sed -i "s/host: bree/host: ${{ matrix.ingress_host }}/g" k8s/sbgb/base/ingress.yaml
-          sed -i "s/- bree/- ${{ matrix.ingress_host }}/g" k8s/sbgb/base/ingress.yaml
-
-          # Deploy infrastructure (PostgreSQL) if changed
+          # Déploiement de l'infrastructure (PostgreSQL)
           microk8s kubectl apply -f k8s/infra/postgres-shared.yaml
 
-          # Deploy SBGB application
+          # Déploiement de l'application SBGB
           microk8s kubectl apply -f k8s/sbgb/base/backend.yaml
           microk8s kubectl apply -f k8s/sbgb/base/frontend.yaml
           microk8s kubectl apply -f k8s/sbgb/base/ingress.yaml
 
-          # Force rollout restart to pull latest images
+          # Redémarrage pour forcer la récupération des dernières images
           microk8s kubectl rollout restart deployment sbgb-backend -n sbgb
           microk8s kubectl rollout restart deployment sbgb-frontend -n sbgb
 
-          # Wait for rollout to complete
+          # Attente de la stabilisation du déploiement
           microk8s kubectl rollout status deployment sbgb-backend -n sbgb --timeout=5m
           microk8s kubectl rollout status deployment sbgb-frontend -n sbgb --timeout=5m
+
+      # --- DÉPLOIEMENT DOCKER POUR PI8 ---
+      - name: Deploy to Docker (Pi8 only - Master only)
+        if: matrix.target == 'pi8' && github.ref == 'refs/heads/master'
+        run: |
+          # Préparation du nom du dépôt en minuscules pour docker-compose.prod.yml
+          export GITHUB_REPOSITORY_LOWER=${GITHUB_REPOSITORY,,}
+          
+          # Mise à jour et redémarrage des services
+          docker compose -f docker-compose.prod.yml pull
+          docker compose -f docker-compose.prod.yml up -d --remove-orphans
