--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -22,7 +22,7 @@ FROM nginx:1.25-alpine
 COPY nginx.conf /etc/nginx/nginx.conf
 
 # Copy built Angular app to nginx html directory (Angular 17+ uses browser subdirectory)
-COPY --from=build /app/dist/sbgb-gui/browser /usr/share/nginx/html
+COPY --from=build /app/dist/sbgb-gui/browser /usr/share/nginx/html/sbgb
 
 # Expose port 80
 EXPOSE 80
