--- a/nginx.conf
+++ b/nginx.conf
@@ -45,8 +45,13 @@ http {
             add_header Content-Type text/plain;
         }
 
-        # API proxy to backend
-        location /api/ {
+        # Redirect root to /sbgb/
+        location = / {
+            return 301 /sbgb/;
+        }
+
+        # API proxy to backend (Standard path)
+        location /sbgb/api/ {
             proxy_pass http://backend:8080/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -63,9 +68,22 @@ http {
             proxy_read_timeout 300s;
         }
 
-        # Angular application
-        location / {
-            try_files $uri $uri/ /index.html;
+        # Backward compatibility for /api/
+        location /api/ {
+            proxy_pass http://backend:8080/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Angular application on /sbgb/
+        location /sbgb/ {
+            try_files $uri $uri/ /sbgb/index.html;
 
             # Cache static assets
             location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
@@ -75,14 +93,14 @@ http {
         }
 
         # Disable cache for index.html
-        location = /index.html {
+        location = /sbgb/index.html {
             add_header Cache-Control "no-cache, no-store, must-revalidate";
             add_header Pragma "no-cache";
             add_header Expires 0;
         }
 
         # Error pages
-        error_page 404 /index.html;
+        error_page 404 /sbgb/index.html;
         error_page 500 502 503 504 /50x.html;
         location = /50x.html {
             root /usr/share/nginx/html;
