--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,5 +1,5 @@
 # Multi-stage build for Angular frontend
-FROM node:20-alpine AS build
+FROM --platform=linux/amd64 node:20-alpine AS build
 
 WORKDIR /app
 
