--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -24,6 +24,10 @@ COPY nginx.conf /etc/nginx/nginx.conf
 # Copy built Angular app to nginx html directory (Angular 17+ uses browser subdirectory)
 COPY --from=build /app/dist/sbgb-gui/browser /usr/share/nginx/html/sbgb
 
+# Copy entrypoint script
+COPY docker-entrypoint.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
+
 # Expose port 80
 EXPOSE 80
 
@@ -31,5 +35,4 @@ EXPOSE 80
 HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
   CMD wget --no-verbose --tries=1 --spider http://localhost:80/health || exit 1
 
-# Start nginx
-CMD ["nginx", "-g", "daemon off;"]
+ENTRYPOINT ["/docker-entrypoint.sh"]
