--- a/Dockerfile.landing
+++ b/Dockerfile.landing
@@ -3,7 +3,7 @@ FROM --platform=linux/amd64 node:20-alpine AS build
 WORKDIR /app
 
 COPY sbgb-landing/package*.json ./
-RUN npm ci
+RUN npm ci --legacy-peer-deps
 
 COPY sbgb-landing/ .
 RUN npm run build:prod
