--- a/sbgb-landing/package.json
+++ b/sbgb-landing/package.json
@@ -14,6 +14,8 @@
     "@angular/material": "^21.1.3",
     "@angular/platform-browser": "^21.1.3",
     "@angular/platform-browser-dynamic": "^21.1.3",
+    "@angular/forms": "^21.1.3",
+    "@angular/router": "^21.1.3",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
